# MM837

./: LICENSE  README.md  forces.h  initialize.h  main.cc
Assignment_1/: CMakeLists.txt  README.md  initialize.cc  settings.inp
Assignment_1/data/integration_error/: 0.inp  1.inp  10.inp  100.inp  101.inp  (+197 more)
Assignment_1/include/: forces.h  initialize.h  integrators.h  properties.h
Assignment_1/scripts/: plot.py  plot_data.py  plot_energy.py
Assignment_1/src/: forces.cc  initialize.cc  integrators.cc  main.cc  properties.cc
Assignment_1/timing/: 128.inp  16384.inp  2048.inp  256.inp  32768.inp  4194304.inp  524288.inp  65536.inp  8192.inp  8388608.inp  timings.txt
Assignment_2/: a.out  data.csv  finite_well.cc  forces.h  fw.x  fw_no_nr.x  integrators.h  linear_well.cc  lw.x  plot.py  plot_well.py  run_fw.sh  wavefunction.h
Assignment_3/: CMakeLists.txt  README.md  settings.inp
Assignment_3/include/: properties.h  solvers.h  statistics.h  toml.h  xoroshiro128plus.h
Assignment_3/src/: main.cc  properties.cc  solvers.cc
Assignment_4/: CMakeLists.txt  README.md  plot_autocorr.py  plot_energies.py  plot_lattice.py  run.inp  settings.inp
Assignment_4/include/: properties.h  solvers.h
Assignment_4/src/: .gitignore  a.out  main.cc  properties.cc  solvers.cc  test.cc  xoroshiro128plus.cc
Assignment_4/src/jag_Structure1_opt_B3LYP_6-31G/: jag_Structure1_opt_B3LYP_6-31G.01.in  jag_Structure1_opt_B3LYP_6-31G.01.mae  jag_Structure1_opt_B3LYP_6-31G.in  jag_Structure1_opt_B3LYP_6-31G.mae  jag_Structure1_opt_B3LYP_6-31G.out  jag_Structure1_opt_B3LYP_6-31G.recover
(+13 files in other folders)
